--- a/back/Gemfile
+++ b/back/Gemfile
@@ -35,6 +35,12 @@ gem "bootsnap", require: false
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax possible
 # gem "rack-cors"
 
+gem "devise"
+gem "devise-i18n"
+gem "devise_token_auth"
+gem "rack-cors"
+gem "active_model_serializers"
+
 group :development, :test do
   gem "debug", platforms: %i[ mri windows ]
   gem 'rspec-rails'
@@ -46,5 +52,5 @@ group :development do
   gem 'rubocop-performance', require: false
   gem 'rubocop-rails', require: false
   gem 'rubocop-rspec'
+  gem "letter_opener_web"
 end
-
